--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^0.49.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6"
   }
 }
