--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "private": false,
   "main": "index.js",
   "scripts": {
-    "serve": "",
-    "build": "webpack --config ./build/webpack.prod.config.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@types/mapbox-gl": "^0.49.1",
     "babel-loader": "^8.0.4",
     "cache-loader": "^1.2.5",
