--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "author": {
     "name": "soal",
-    "email": "sorrrow.about.alice@gmail.com",
+    "email": "sorrrow.about.alice@pm.me",
     "url": "https://github.com/soal"
   },
   "description": "Wrapper for Mapbox Gl JS library that gives nice Promise-based API to asynchronous map functions",
