--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "author": {
     "name": "soal",
-    "email": "sorrrow.about.alice@pm.me",
+    "email": "soal@soal.red",
     "url": "https://github.com/soal"
   },
   "description": "Wrapper for Mapbox Gl JS library that gives nice Promise-based API to asynchronous map functions",
@@ -13,26 +13,17 @@
     "url": "https://github.com/soal/map-promisified.git"
   },
   "private": false,
-  "main": "dist/mapPromisify.js",
+  "main": "dist/mapPromisify.umd.js",
+  "module": "dist/mapPromisify.js",
   "scripts": {
-    "build": "webpack",
+    "build": "rollup -c rollup.config.es.js && rollup -c rollup.config.umd.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@rollup/plugin-typescript": "^6.0.0",
     "@types/mapbox-gl": "^0.49.1",
-    "babel-loader": "^8.0.4",
-    "cache-loader": "^1.2.5",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "fork-ts-checker-webpack-plugin": "^0.4.14",
-    "terser-webpack-plugin": "^1.1.0",
-    "thread-loader": "^1.2.0",
-    "ts-loader": "^5.3.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6",
-    "webpack": "^4.25.0",
-    "webpack-cli": "^3.1.2"
+    "rollup": "^2.28.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.0.3"
   }
 }
